Escrevi uma introdução

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Home page</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi doloribus sit quod in repellat quibusdam eos earum molestiae odit dolorum! Odio quod incidunt, laudantium doloribus ex quibusdam delectus dolores porro!</p>
 </body>
 </html>
