nova introdução e dados de autor e data

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Home page</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi doloribus sit quod in repellat quibusdam eos earum molestiae odit dolorum! Odio quod incidunt, laudantium doloribus ex quibusdam delectus dolores porro!</p>
+    <p>introdução da minha home page.</p>
+    <ul>
+        <li>Autor: Luis Gustavo</li>
+        <li>Data: 17/11/25</li>
+    </ul>
 </body>
 </html>
